<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Remote</string>
    <string name="action_settings">Settings</string>
    <string name="image_desc">Icon</string>
    
    <!-- String array for Main ListView -->
    <string-array name="list_items">
        <item name="winamp">Winamp</item>
        <item name="spotify">Spotify</item>
        <item name="youtube">YouTube</item>
        <item name="send_image">Send Image</item>
        <item name="preferences">Preferences</item>
        <item name="filler1">test</item>
        <item name="filler2">test</item>
        <item name="filler3">test</item>
        <item name="filler4">test</item>
    </string-array>
    <string name="shared_pref_key">Shared Preferences Key</string>
    <string name="default_ip_address">192.168.1.139</string>
    <string name="default_port_number">3490</string>
    <string name="lbl_artist">Artist: </string>
    <string name="lbl_song">Song: </string>
    <string name="lbl_next">Next</string>
    <string name="lbl_play">Play</string>
    <string name="lbl_prev">Prev</string>
    <string name="lbl_pause">Pause</string>
    <string name="lbl_shuffle">Shuffle</string>
    <string name="lbl_album_art">Album Art</string>
    <string name="lbl_default_time">0:00</string>
    <string name="menu_update_database">Update Database</string>
    

</resources>
