<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/play_control_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/play_control_gradient"
    android:clickable="true" >

    <RelativeLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/play_control_handle_gradient" >

        <Button
            android:id="@+id/btnPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/button_selector"
            android:onClick="onClick"
            android:text="@string/lbl_play"
            android:textColor="#F2FFFFFF" >
        </Button>

        <Button
            android:id="@+id/btnPrev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/btnPlay"
            android:background="@drawable/button_selector"
            android:onClick="onClick"
            android:text="@string/lbl_prev"
            android:textColor="#F2FFFFFF" >
        </Button>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/btnPlay"
            android:background="@drawable/button_selector"
            android:onClick="onClick"
            android:text="@string/lbl_next"
            android:textColor="#F2FFFFFF" >
        </Button>

        <TextView
            android:id="@+id/txtShuffle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="4dp"
            android:layout_toRightOf="@id/btnNext"
            android:gravity="center_horizontal"
            android:text="@string/lbl_shuffle"
            android:textColor="#F2FFFFFF" >
        </TextView>

        <CheckBox
            android:id="@+id/cbShuffle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/btnNext"
            android:layout_marginRight="14dp" >
        </CheckBox>
    </RelativeLayout>

    <ImageView
        android:id="@+id/imgAlbum"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/lbl_album_art"
        android:src="@drawable/ic_launcher" >
    </ImageView>

    <SeekBar
        android:id="@+id/trackPositionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonLayout"
        android:background="@drawable/play_control_handle_gradient" >
    </SeekBar>

    <TextView
        android:id="@+id/txtTimeLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/trackPositionBar"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/lbl_default_time"
        android:textColor="#f2ffffff" >
    </TextView>

    <TextView
        android:id="@+id/txtTimeTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/trackPositionBar"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/lbl_default_time"
        android:textColor="#f2ffffff" >
    </TextView>

</RelativeLayout>